--- a/partials/_global.scss
+++ b/partials/_global.scss
@@ -5,21 +5,11 @@ html{
 
 *{
     box-sizing: border-box;
-    font-size: 2rem;
     font-weight: 400;
-
-    @include landscape-mobile{
-        font-size: 1.5rem;
-    }
-
-    @include mobile {
-        font-size: 1.25rem;
-    }
 }
 
 .wrapper{
-    max-width: 1200px;
-    width: 100%;
+    max-width: 735px;
     margin: 0 auto;
 }
 
@@ -30,10 +20,6 @@ body{
     padding-bottom: 15px;
 }
 
-section{
-    width: 100%;
-}
-
 main{
     width: 735px;
     background: rgb(65, 164, 86);
@@ -42,11 +28,11 @@ main{
     border: 2px solid white;
     border-radius: 5px;
 
-    @include small-tablet{
+    @include smallTablet{
         width: 568px;
     }
 
-    @include landscape-mobile{
+    @include landscapeMobile{
         width: 476px;
     }
 
@@ -54,18 +40,4 @@ main{
         width: 316px;
         padding: 5px;
     }
-}
-
-//input visibility hidden
-.visuallyHidden:not(:focus):not(:active) {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
 }
