--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -2,19 +2,18 @@ h1{
     font-family: 'Calistoga', cursive;
     font-size: 8rem;
     color: #c6e2ff;
-    animation: neon 0.8s infinite ease-in-out alternate;
+    animation: neon .08s ease-in-out infinite alternate;
     text-transform: uppercase;
     margin: 0;
     padding-bottom: 10px;
     text-align: center;
     letter-spacing: 1.15rem;
-    text-rendering:optimizeLegibility;
 
-    @include small-tablet{
+    @include smallTablet{
         font-size: 6rem;
     }
 
-    @include landscape-mobile{
+    @include landscapeMobile{
         letter-spacing: initial;
     }
 
@@ -26,7 +25,7 @@ h1{
             content: " ♠";
             font-size: 10rem;
 
-            @include small-tablet {
+            @include smallTablet {
                 font-size: 8rem;
             }
 
@@ -39,11 +38,11 @@ h1{
 header{
     width: 735px;
 
-    @include small-tablet{
+    @include smallTablet{
         width: 568px;
     }
 
-    @include landscape-mobile{
+    @include landscapeMobile{
         width: 476px;
     }
 
@@ -52,25 +51,24 @@ header{
     }
 }
 
-
 @keyframes neon {
     from {
-      text-shadow:
-      0 0 6px rgba(202,228,225,0.92),
-      0 0 30px rgba(202,228,225,0.34),
-      0 0 12px rgba(30,132,242,0.52),
-      0 0 21px rgba(30,132,242,0.92),
-      0 0 34px rgba(30,132,242,0.78),
-      0 0 54px rgba(30,132,242,0.92);
+        text-shadow:
+        0 0 6px rgba(202,228,225,0.92),
+        0 0 30px rgba(202,228,225,0.34),
+        0 0 12px rgba(30,132,242,0.52),
+        0 0 21px rgba(30,132,242,0.92),
+        0 0 34px rgba(30,132,242,0.78),
+        0 0 54px rgba(30,132,242,0.92);
     }
     to {
-      text-shadow:
-      0 0 6px rgba(202,228,225,0.98),
-      0 0 30px rgba(202,228,225,0.42),
-      0 0 12px rgba(30,132,242,0.58),
-      0 0 22px rgba(30,132,242,0.84),
-      0 0 38px rgba(30,132,242,0.88),
-      0 0 60px rgba(30,132,242,1);
+        text-shadow:
+        0 0 6px rgba(202,228,225,0.98),
+        0 0 30px rgba(202,228,225,0.42),
+        0 0 12px rgba(30,132,242,0.58),
+        0 0 22px rgba(30,132,242,0.84),
+        0 0 38px rgba(30,132,242,0.88),
+        0 0 60px rgba(30,132,242,1);
     }
 }
 
@@ -91,11 +89,11 @@ header{
         content: "> ";
     }
 
-    @include small-tablet{
+    @include smallTablet{
         width: 568px;
     }
 
-    @include landscape-mobile{
+    @include landscapeMobile{
         width: 476px;
         font-size: 2.75rem;
     }
