--- a/partials/_index.scss
+++ b/partials/_index.scss
@@ -18,7 +18,7 @@
         color: rgb(23, 36, 44);
         transition: 0.4s;
 
-        @include landscape-mobile{
+        @include landscapeMobile{
             font-size: 1.5rem;
             width: 120px;
             margin-top: 2px;
@@ -38,10 +38,10 @@
 }
 
 //format subtitle bar
-.sub-title{
+.subTitle{
     display: flex;
     justify-content: space-between;
-    @include small-tablet{
+    @include smallTablet{
         padding-top: 5px;
     }
 }
@@ -52,13 +52,17 @@
     font-size: 2rem;
     align-self: center;
 
-    @include landscape-mobile{
+    @include landscapeMobile{
         font-size: 1.5rem;
+    }
+
+    @include mobile {
+        font-size: 1.25rem;
     }
 }
 
 //Format money in bank for each player
-.display-money{
+.displayMoney{
     display: flex;
     height: 5vh;
     align-items: center;
@@ -69,10 +73,22 @@
         margin-right: 10px;
         font-size: 2rem;
 
-        @include landscape-mobile{
+        @include landscapeMobile{
             font-size: 1.5rem;
         }
 
+        @include mobile {
+            font-size: 1.25rem;
+        }
+    }
+
+    .money{
+        font-size: 2rem;
+
+        @include landscapeMobile{
+            font-size: 1.5rem;
+        }
+    
         @include mobile {
             font-size: 1.25rem;
         }
@@ -108,7 +124,7 @@
 .hand > div:nth-of-type(6){
     margin-right: 0;
 
-    @include landscape-mobile {
+    @include landscapeMobile {
         margin-right: 10px;
     }
 
@@ -132,7 +148,7 @@
     transition: background 0.3s;
     text-align: center;
 
-    @include small-tablet{
+    @include smallTablet{
         width: 82px;
         height: 114px;
         margin-top: 5px;
@@ -146,7 +162,7 @@
 
     &:nth-of-type(5){
 
-        @include landscape-mobile{
+        @include landscapeMobile{
             margin-right: 0;
         }
     }
@@ -158,7 +174,7 @@
         text-align: center;
         // word-spacing: 20px;
 
-        @include small-tablet {
+        @include smallTablet {
             padding-top: 5px;
         }
 
@@ -174,7 +190,7 @@
         font-size: 7.5rem;
         margin: 0;
 
-        @include small-tablet{
+        @include smallTablet{
             font-size: 6rem;
         }
 
@@ -188,7 +204,7 @@
             margin: 0;
             color: transparent;
 
-            @include small-tablet{
+            @include smallTablet{
                 font-size: 6rem;
             }
 
@@ -215,7 +231,64 @@
     justify-content: space-between;
     padding: 0 10px;
 
-    @include landscape-mobile{
+    @include landscapeMobile{
         padding: 0 5px;
+    }
+}
+
+// POP UP WINDOW FOR BEGINNING AND END
+//Could not use camel case because classes where predetermined
+.instructions {
+    background: rgb(2, 2, 27);
+    font-family:  'Coda', cursive;
+    color: white;
+    line-height: 1.5;
+    font-size: 4rem;
+    @include flexCenter();
+
+    @include smallTablet{
+        font-size: 2.5rem;
+    }
+
+    p{
+        margin: 50px 0;
+    }
+}
+
+//Title Bar
+.ui-dialog-titlebar{
+    background: rgb(2, 2, 27);
+}
+
+.no-close .ui-dialog-titlebar-close {
+display: none;
+}
+
+//New Game button
+.ui-dialog-buttons {
+    background-color: rgb(2, 2, 27);
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.ui-dialog-buttonset > button{
+    cursor: pointer; 
+    font-size: 3rem;
+    width: 200px;
+    background: rgb(255, 174, 0);
+    padding: 2px;
+    border-color: rgba(255, 174, 0, 0.85);
+    border-radius: 5px;
+    font-family: 'Coda', cursive;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: 0.3s;
+    margin-bottom: 30px;
+
+    &:hover,
+    &:focus{
+        background: rgb(253, 196, 73);
+        border-color: rgba(253, 196, 73, 0.85);
     }
 }
