--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -1,5 +1,14 @@
+@font-face{
+    font-family: 'Calistoga';
+    src: url(../assets/calistoga-v1-latin-regular.ttf);
+    src: url(../assets/calistoga-v1-latin-regular.eot);
+    src: url(../assets/calistoga-v1-latin-regular.svg);
+    src: url(../assets/calistoga-v1-latin-regular.woff2);
+    src: url(../assets/calistoga-v1-latin-regular.woff);
+}
+
 h1{
-    font-family: 'Calistoga', cursive;
+    font-family: 'Calistoga';
     font-size: 8rem;
     color: #c6e2ff;
     animation: neon .08s ease-in-out infinite alternate;
