--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -17,6 +17,7 @@ h1{
     padding-bottom: 10px;
     text-align: center;
     letter-spacing: 1.15rem;
+    text-rendering: geometricPrecision;
 
     @include smallTablet{
         font-size: 6rem;
