--- a/styles/style.css
+++ b/styles/style.css
@@ -255,7 +255,8 @@ h1 {
   margin: 0;
   padding-bottom: 10px;
   text-align: center;
-  letter-spacing: 1.15rem; }
+  letter-spacing: 1.15rem;
+  text-rendering: geometricPrecision; }
   @media (max-width: 765px) {
     h1 {
       font-size: 6rem; } }
