--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -1,5 +1,7 @@
 @font-face{
     font-family: 'Calistoga';
+    font-style: normal;
+    font-weight: 400;
     src: url(../assets/calistoga-v1-latin-regular.ttf);
     src: url(../assets/calistoga-v1-latin-regular.eot);
     src: url(../assets/calistoga-v1-latin-regular.svg);
